--- a/main.html
+++ b/main.html
@@ -19,7 +19,8 @@
     </header>
     
     <div class="content">
-        <h2>UC Davis and UC Davis Health </h2> <h2>Letter of Information</h2>
+        <h2>UC Davis and UC Davis Health </h2> 
+        <h2>Letter of Information</h2>
         <h3> <b>Title of study: </b>  Play Conditioning</h3> 
         <h3> <b> Investigator: </b> Dr. Josh McCoy, Ph.D.</h3>
 
@@ -32,7 +33,7 @@
         <p> 
             <b> Questions </b>
             If you have any questions about this research, please feel free to contact the primary investigator at (530)-754-0776 or jamccoy@ucdavis.edu, or contact the study administrators at mechanicsstudyteam@gmail.com. 
-            </p>
+        </p>
     </div>
 </body>
 </html>
