--- a/pre-survey.html
+++ b/pre-survey.html
@@ -22,8 +22,7 @@
 
   <div class="content">
     <h1>Intake Questionnaire</h1>
-    <div class="question" id="question">
-    </div>
+    <section class="question" id="question"></section>
   </div>
   <script src="pre-survey.js"></script>
 </body>
