added button to main page

--- a/main.html
+++ b/main.html
@@ -41,6 +41,8 @@
         </p>
         <h4> <a href="./pre-survey.html"> Click here to be taken to the pre-survey! </a> </h4>
     </div>
+    <a href="./pre-survey.html" id="bottom-nav"></a>
+      
 </body>
 
 </html>
