added buttons for the other two as well...

--- a/pre-survey.html
+++ b/pre-survey.html
@@ -24,6 +24,7 @@
     <h1>Intake Questionnaire</h1>
     <section class="question" id="question"></section>
   </div>
+  <a href="./game.html" id="bottom-nav"></a>
   <script src="pre-survey.js"></script>
 </body>
 
