--- a/game.html
+++ b/game.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Play Conditioning</title>
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="game.css">
-</head>
-
-<body>
-    <header>
-        <h1>Play Conditioning</h1>
-        <nav>
-            <ul>
-                <li><a href="./main.html">Info</a></li>
-                <li><a href="./pre-survey.html">Game</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <div class="content">
-    </div>
-    <a href="./post-survey.html" id="bottom-nav"></a>
-</body>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Play Conditioning</title>
+        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="game.css">
+    </head>
+    <body>
+        <header>
+            <h1>Play Conditioning</h1>
+            <nav>
+                <ul>
+                    <li><a href="./main.html">Info</a></li>
+                    <li><a href="./pre-survey.html">Game</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div class="content">
+            </div>
+        </main>
+        <a href="./post-survey.html" id="bottom-nav"></a>
+    </body>
 </html>
