--- a/contact.html
+++ b/contact.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Play Conditioning</title>
-    <link rel="stylesheet" href="main.css">
-</head>
-
-<body>
-    <header>
-        <h1>Play Conditioning</h1>
-        <nav>
-            <ul>
-                <li><a href="./main.html">Info</a></li>
-                <li><a href="./game.html">Game</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <div class="content">
-        <h2> Contact </h2>
-        <p> <b> Phone Number: </b> (530)-754-0776 </p>
-        <p> <b> Email: </b> jamccoy@ucdavis.edu </p>
-        <p> <b> Alternate email: </b> mechanicsstudyteam@gmail.com </p>
-    </div>
-</body>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Play Conditioning</title>
+        <link rel="stylesheet" href="main.css">
+    </head>
+    <body>
+        <header>
+            <h1>Play Conditioning</h1>
+            <nav>
+                <ul>
+                    <li><a href="./main.html">Info</a></li>
+                    <li><a href="./game.html">Game</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <div class="content">
+                <h2> Contact </h2>
+                <p> <b> Phone Number: </b> (530)-754-0776 </p>
+                <p> <b> Email: </b> jamccoy@ucdavis.edu </p>
+                <p> <b> Alternate email: </b> mechanicsstudyteam@gmail.com </p>
+            </div>
+        </main>
+    </body>
 </html>
