--- a/post-survey.html
+++ b/post-survey.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Play Conditioning</title>
         <link rel="stylesheet" href="main.css">
     </head>
-
     <body>
         <header>
             <h1>Play Conditioning</h1>
@@ -19,13 +17,12 @@
             </ul>
             </nav>
         </header>
-
-        <div class="content">
-            <h1>Intake Questionnaire</h1>
-            <section class="question" id="question"></section>
-          </div>
-          <a href="./game.html" id="bottom-nav"></a>
-          <script src="post-survey.js"></script>
+        <main>
+            <div class="content">
+                <h1>Intake Questionnaire</h1>
+                <section class="question" id="question"></section>
+            </div>
+        </main>
+        <script src="post-survey.js"></script>
     </body>
-
 </html>
