--- a/pre-survey.html
+++ b/pre-survey.html
@@ -12,7 +12,7 @@
       <nav>
         <ul>
           <li><a href="./main.html">Info</a></li>
-          <li><a href="./pre-survey.html">Game</a></li>
+          <li><a href="./game.html">Game</a></li>
           <li><a href="./contact.html">Contact</a></li>
         </ul>
       </nav>
