Refactor main to index

--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Play Conditioning</title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="game.css">
     </head>
     <body>
@@ -12,7 +12,7 @@
             <h1>Play Conditioning</h1>
             <nav>
                 <ul>
-                    <li><a href="./main.html">Info</a></li>
+                    <li><a href="./index.html">Info</a></li>
                     <li><a href="./game.html">Game</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
