--- a/post-survey.html
+++ b/post-survey.html
@@ -19,7 +19,7 @@
         </header>
         <main>
             <div class="content">
-                <h1>Intake Questionnaire</h1>
+                <h1>Outtake Questionnaire</h1>
                 <section class="question" id="question"></section>
             </div>
         </main>
