--- a/game.html
+++ b/game.html
@@ -19,7 +19,7 @@
             </nav>
         </header>
         <main>
-            <div class="content"></div>
+            <div class="content" style="height: 500px;"></div>
         </main>
         <a href="./post-survey.html" id="bottom-nav"></a>
     </body>
