--- a/game.html
+++ b/game.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Play Conditioning</title>
-        <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="game.css">
-    </head>
-    <body>
-        <header>
-            <h1>Play Conditioning</h1>
-            <nav>
-                <ul>
-                    <li><a href="./index.html">Info</a></li>
-                    <li><a href="./game.html">Game</a></li>
-                    <li><a href="./contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <div class="content" style="height: 500px;"></div>
-        </main>
-        <a href="./post-survey.html" id="bottom-nav"></a>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Play Conditioning</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="game.css">
+</head>
+<body>
+    <header>
+        <h1>Play Conditioning</h1>
+        <nav>
+            <ul>
+                <li><a href="./index.html">Info</a></li>
+                <li><a href="./game.html">Game</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="content">
+            <iframe src="Build/index.html" style="width: 100%; height: 100%; border: none;"></iframe>
+        </div>
+    </main>
+    <a href="./post-survey.html" id="bottom-nav"></a>
+</body>
 </html>
