--- a/game.html
+++ b/game.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <div class="content">
-            <iframe src="Build/index.html" style="width: 100%; height: 100%; border: none;"></iframe>
+            <iframe src="index.html" style="width: 100%; height: 100%; border: none;"></iframe>
         </div>
     </main>
     <a href="./post-survey.html" id="bottom-nav"></a>
