--- a/game.html
+++ b/game.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Play Conditioning</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <header>
         <h1>Play Conditioning</h1>
         <nav>
             <ul>
-                <li><a href="./index.html">Info</a></li>
+                <li><a href="./main.html">Info</a></li>
                 <li><a href="./game.html">Game</a></li>
                 <li><a href="./contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <div class="content">
+        <div class="game-content">
             <iframe src="index.html" style="width: 100%; height: 100%; border: none;"></iframe>
         </div>
     </main>
