--- a/main.html
+++ b/main.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Play Conditioning</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
         <header>
             <h1>Play Conditioning</h1>
             <nav>
                 <ul>
-                    <li><a href="./index.html">Info</a></li>
+                    <li><a href="./main.html">Info</a></li>
                     <li><a href="./pre-survey.html">Game</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
