Fix uncompressed file errors

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       var config = {
         arguments: [],
         dataUrl: buildUrl + "/Build.data.gz",
-        frameworkUrl: buildUrl + "/Build.framework.js.gz",
+        frameworkUrl: buildUrl + "/Build.framework.js",
         codeUrl: buildUrl + "/Build.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
