--- a/pre-survey.html
+++ b/pre-survey.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Play Conditioning</title>
-    <link rel="stylesheet" href="main.css">
-  </head>
-  <body>
-    <header>
-      <h1>Play Conditioning</h1>
-      <nav>
-        <ul>
-          <li><a href="./main.html">Info</a></li>
-          <li><a href="./game.html">Game</a></li>
-          <li><a href="./contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <div class="content">
-        <h1>Intake Questionnaire</h1>
-        <section class="question" id="question"></section>
-      </div>
-      <a href="./game.html" id="bottom-nav"></a>
-    </main>
-    <script src="pre-survey.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Questionnaire</title>
+  <link rel="stylesheet" href="main.css">
+</head>
+
+<body>
+  <header>
+    <h1>Play Conditioning</h1>
+    <nav>
+      <ul>
+        <li><a href="./main.html">Info</a></li>
+        <li><a href="./game.html">Game</a></li>
+        <li><a href="./contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <div class="content">
+      <h1>Intake Questionnaire</h1>
+      <section class="question" id="questionnaire"></section>
+      
+    </div>
+  </main>
+  <script src="pre-survey.js"></script>
+</body>
+
 </html>
